# MLOps_AGH_Lab01_Homework

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  inference.py  main.py  pyproject.toml
tests/: test_main.py
