[project]
name = "mlops-agh-lab01-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clean-text>=0.7.1",
    "fastapi>=0.135.3",
    "joblib>=1.5.3",
    "pre-commit>=4.5.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[tool.mypy]
explicit_package_bases = true
mypy_path = "."
ignore_missing_imports = true
